[package]
name = "driver-station"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Crate for basic FRC Driver Station functionality"
readme = "README.md"
repository = "https://github.com/koibots8230/driver-station-rs"
documentation = "https://docs.rs/driver-station"

[dependencies]
local-ip-address = "0.5.3"
serde = { version = "1.0.163", features = ["derive"] }
